# shallow_red

./: .gitignore  README.md  modal_app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT_PLAN.md
reports/: ADVERSARIAL_ENDGAME_2026-07-21.md  BASELINE_2026-07-21.md  DYNAMIC_PROOF_HYBRID_2026-07-22.md  FORCED_SELFMATE_ADVERSARIAL_2026-07-22.md  OVERNIGHT_EXPERIMENTS_2026-07-22.md  PROOF_FINETUNE_2026-07-22.md  SELFMATE_CORPUS_RETRO_2026-07-22.md  SELFMATE_FUZZER_2026-07-22.md  SPEED_RANDOM_2026-07-21.md  SUPERVISED_2026-07-21.md  SYNTHETIC_ANCESTRY_2026-07-22.md  SYNTHETIC_LOSER_GENERATION_2026-07-22.md  TINY_WEB_MODEL_2026-07-22.md  V02_RANKED_2026-07-21.md  V03_WEAK_OPPONENTS_2026-07-21.md  WEB_ENGINE_EVALUATION_2026-07-22.md
scripts/: __init__.py  build_proof_ranked_dataset.py  build_reachable_ranked_dataset.py  build_synthetic_ancestry_dataset.py  compare_paired_reports.py  download_syzygy_3piece.sh  evaluate_ranked_checkpoint.py  evaluate_selfmate_curriculum.py  evaluate_web_frozen.py  expand_selfmate_ancestors.py  export_tiny_web_policy.py  finalize_synthetic_ancestry_dataset.py  four_piece_retrograde.py  fuzz_selfmate_branches.py  generate_fuzzer_frontier.py  import_yacpdb_selfmates.py  merge_fuzzer_corpus.py  merge_retro_reports.py  mine_forced_selfmate.py  popeye_prescreen.py  screen_synthetic_ancestry.py  split_ranked_dataset.py  syzygy_pilot.py  three_piece_retrograde.py
src/worst_chess/: __init__.py  cli.py  uci.py  verification.py
tests/integration/: test_match.py  test_stockfish_agent.py  (+1 more)
web/: package-lock.json  package.json
(+125 files in other folders)
