[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "worst-chess-ever"
version = "0.1.0"
description = "An orthodox chess engine optimized to get itself checkmated"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chess>=1.11.2,<2",
  "numpy>=1.24,<2.3",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]
ml = [
  "torch>=2.3",
]
cloud = [
  "modal>=1.4.3,<2",
]

[project.scripts]
worst-chess = "worst_chess.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worst_chess"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["worst_chess"]
